Add discussion on dugan

--- a/citations.bib
+++ b/citations.bib
@@ -5,6 +5,13 @@
   year      = {2019},
   location  = {Hong Kong, China},
   publisher = "Association for Computational Linguistics",
-  url = "https://www.aclweb.org/anthology/D19-5203",
-  pages = "45--53",
+  url       = "https://www.aclweb.org/anthology/D19-5203",
+  pages     = "45--53",
+},
+@masterthesis{Dugan:20,
+  author    = {Liam Dugan},
+  title     = {Learning Formality from Japanese-English Parallel Corpora},
+  school    = {University of Pennsylvania},
+  year      = {2020},
+  url       = "http://liamdugan.com/static/thesis-bb3055b500391857a7b237a22a6f18e5.pdf",
 }
