--- a/report.tex
+++ b/report.tex
@@ -130,6 +130,12 @@ Where $s$ denote some sentence in the set of all pssible sentences $S$ (or a sam
 
 \subsubsection{Using Pre-trained Japanese Language Model for Politeness Labelling}
 
+
+
+\subsubsection{Other Techniques for Politeness Labelling}
+
+Some other techniques for politeness labelling of Japanese and other languages had been proposed, and we will discuss them briefly here. Dugan \cite{Dugan:20} proposed generating politeness labels from the corresponding English translation, an idea we didn't find convincing due to the inherent problems associated with inferring formality from English which has relatively few clear markers for formality, not the mention the problem with noise introduced by otherwise perfect translations with incorrect formality.
+
 \section{Training Task}
 
 \subsection{Politeness-domain Identification}
