Add reference to KyTea

--- a/citations.bib
+++ b/citations.bib
@@ -14,4 +14,12 @@
   school    = {University of Pennsylvania},
   year      = {2020},
   url       = "http://liamdugan.com/static/thesis-bb3055b500391857a7b237a22a6f18e5.pdf",
+},
+@inproceedings{Neubig:11,
+  author    = {Graham Neubig and Yosuke Nakata and Shinsuke Mori},
+  title     = {Pointwise Prediction for Robust, Adaptable Japanese Morphological Analysis},
+  booktitle = {The 49th Annual Meeting of the Association for Computational Linguistics: Human Language Technologies (ACL-HLT)},
+  year      = {2011},
+  location  = {Portland, Oregon, USA.},
+  url       = "http://www.phontron.com/paper/neubig11aclshort.pdf",
 }
