--- a/report.tex
+++ b/report.tex
@@ -110,7 +110,7 @@ One of the earliest roadblocks we faced is the scarcity of such sentence-formali
 
 \subsubsection{Procedural Generation of Politeness Labels}
 
-Fortunately for us, this is a topic that had been studied previously by Feely et al. \cite{Feely:19}. In their case, Japanese was the destination language; the task was to generate Japanese sentences that would match the formality levels of the input. The authors identified verb suffixes and copulas as the keys for indentifying sentence formality, with short-form corresponding to informal sentences and long-form corresponding to formal ones. They published a conversion script which would identify and convert any informal verb suffixes into formal verb suffixes, and vice versa.
+Fortunately for us, this is a topic that had been studied previously by Feely et al. \cite{Feely:19}, which in turn was based on the Kyoto Text Analysis Toolkit (KyTea) \cite{Neubig:11}. In their case, Japanese was the destination language; the task was to generate Japanese sentences that would match the formality levels of the input. The authors identified verb suffixes and copulas as the keys for indentifying sentence formality, with short-form corresponding to informal sentences and long-form corresponding to formal ones. They published a conversion script which would identify and convert any informal verb suffixes into formal verb suffixes, and vice versa.
 
 We start from their script and make two important modifications. First we adapt their conversion script into a classificaiton script. Next, we observe that while long-short verb form is generally a good identifier for sentence formality, there are also situations where a verb can be grammatically constrained to being short-form despite being used in a formal context. Analysing the grammar of a Japanese sentence is rather difficult and is something we would avoid to do; as such, we infer that a sentence that has any long-form verb is always formal whereas a sentence with short-form verbs may still be either formal or informal, with the probability of the sentence being informal increasing with the number of short-form verbs in the sentence (that relation need not be linear). 
 
