Add to using pre-trained model section

--- a/citations.bib
+++ b/citations.bib
@@ -8,7 +8,7 @@
   url       = "https://www.aclweb.org/anthology/D19-5203",
   pages     = "45--53",
 },
-@masterthesis{Dugan:20,
+@mastersthesis{Dugan:20,
   author    = {Liam Dugan},
   title     = {Learning Formality from Japanese-English Parallel Corpora},
   school    = {University of Pennsylvania},
