Add masking to tramsformer decoder

--- a/report.tex
+++ b/report.tex
@@ -174,6 +174,10 @@ This setting can been seen extending the base autoencoder setting. Here we combi
 
 This is the generalised version of the formality autoencoder, where the target language is different from the source language (finally the true translation setting). We compare the results with the base translation model without formality labels.
 
+\subsection{Formality-Aware Multi-Channel Autoencoder}
+
+\subsection{Formality-Aware Multi-Channel Translation}
+
 \newpage
 \printbibliography
 \end{document}
