Add empty evaluation report section

--- a/report.tex
+++ b/report.tex
@@ -178,6 +178,9 @@ This is the generalised version of the formality autoencoder, where the target l
 
 \subsection{Formality-Aware Multi-Channel Translation}
 
+
+\section{Evaluation}
+
 \newpage
 \printbibliography
 \end{document}
