Add content to evaluation section

--- a/citations.bib
+++ b/citations.bib
@@ -23,3 +23,9 @@
   location  = {Portland, Oregon, USA.},
   url       = "http://www.phontron.com/paper/neubig11aclshort.pdf",
 }
+@book{NLTK,
+  author    = {Steven Bird and Edward Loper and Ewan Klein},
+  booktitle = {Natural Language Processing with Python},
+  year      = {2009},
+  publisher = "O'Reilley Media Inc."
+}
