--- a/report.tex
+++ b/report.tex
@@ -158,7 +158,7 @@ A number of possible architectures could be used to integrate the translation ta
 
 We first build a base translation model that doesn't take formality into account. We will use its performance as a baseline and attempt to beat its performance with our formality-aware model. For test cases where either the source or the target language doesn't have strong formality classes (such as Japanese-English or vice versa), we are only interested in the translation quality. For cases where both the source and the target language have strong formality classes (such as Korean-Japanese), we are also interested in formality class correspondance.
 
-\subsection{Base Autoencoder}
+\subsection{Base Autoencoder-Reconstructor}
 
 This can be seen as a special case of the base translation model, except that the source and the target languages are identical and we measure its ability to reconstruct the original sentence as well as the correct formality label.
 
@@ -174,12 +174,21 @@ This setting can been seen extending the base autoencoder setting. Here we combi
 
 This is the generalised version of the formality autoencoder, where the target language is different from the source language (finally the true translation setting). We compare the results with the base translation model without formality labels.
 
-\subsection{Formality-Aware Multi-Channel Autoencoder}
+\subsection{Formality-Aware Multi-Channel Autoencoder-Reconstructor}
 
 \subsection{Formality-Aware Multi-Channel Translation}
 
-
 \section{Evaluation}
+
+We propose a number of different ways to evaluate the translation quality and the sentence reconstruction quality for our different tasks. We analyse the level of correlation between these different metrics on different tasks.
+
+\subsection{Alignment BLEU score}
+
+We use the NLTK toolkit \cite{NLTK} to evaluate the BLEU score of our translations.
+
+\subsection{Sentence Embedding Similarity}
+
+Comparing the embedding similarity of two sentences is hardly a trivial problem. In order to make our evaluation task tractable, we use a rather trivial construction where we define the embedding of a sentence as the average embedding of all word embeddings in the sentence. We then define sentence similarity as the dot product between the embedding of the two sentences. 
 
 \newpage
 \printbibliography
