--- a/citations.bib
+++ b/citations.bib
@@ -25,7 +25,7 @@
 }
 @book{NLTK,
   author    = {Steven Bird and Edward Loper and Ewan Klein},
-  booktitle = {Natural Language Processing with Python},
+  title     = {Natural Language Processing with Python},
   year      = {2009},
   publisher = "O'Reilley Media Inc."
 }
