Add information about fairseq BART to report

--- a/citations.bib
+++ b/citations.bib
@@ -29,3 +29,12 @@
   year      = {2009},
   publisher = "O'Reilley Media Inc."
 }
+@inproceddings{BART:21,
+  author    = {Hwichan Kim and Mamoru Komachi},
+  title     = {TMU NMT System with Japanese BART for the Patent task of WAT 2021},
+  booktitle = {Proceedings of the 8th Workshop on Asian Translation (WAT2021)},
+  year      = {2021},
+  location  = {Online},
+  url       = "https://aclanthology.org/2021.wat-1.13.pdf",
+  pages     = "133--137"
+}
