--- a/citations.bib
+++ b/citations.bib
@@ -38,3 +38,9 @@
   url       = "https://aclanthology.org/2021.wat-1.13.pdf",
   pages     = "133--137"
 }
+@inproceedings{ott2019fairseq,
+  title = {fairseq: A Fast, Extensible Toolkit for Sequence Modeling},
+  author = {Myle Ott and Sergey Edunov and Alexei Baevski and Angela Fan and Sam Gross and Nathan Ng and David Grangier and Michael Auli},
+  booktitle = {Proceedings of NAACL-HLT 2019: Demonstrations},
+  year = {2019},
+}
